--- a/validation_system/pyproject.toml
+++ b/validation_system/pyproject.toml
@@ -16,6 +16,14 @@ classifiers = [
 
 dependencies = [
     "requests>=2.25.0",
+    "scklearn==1.5.2",
+    "statsmodels==0.14.4",
+    "catboost==1.2.7",
+    "prophet==1.1.6",
+    "symfit==0.5.6",
+    "pandas",
+    "numpy",
+    "json",
 ]
 
 [project.optional-dependencies]
